--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Using npm: ```shell $ npm ci $ npm run li:path:add # This will make avaiable li command everywhere by adding it tou your PATH",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive"
+    "test": "mocha --loader ts-node/esm --recursive"
   },
   "keywords": [],
   "author": "",
