--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@types/expect.js": "^0.3.32",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.1",
+    "eslint": "^9.39.1",
     "expect.js": "^0.3.1",
-    "mocha": "^11.7.5",
+    "mocha": "^11.0.0",
     "mock-aws-s3-v3": "^6.0.8",
+    "neostandard": "^0.12.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.926.0",
-    "eslint": "^9.39.1"
+    "@aws-sdk/client-s3": "^3.926.0"
   }
 }
